--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,65 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Eventos</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-</head>
-<body>
-<div>
-<div id="user_nav">
-  <% if current_user %>
-    Signed in as <strong><%= current_user.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
-  <% end %>
-</div>
-</div>
-<%= yield %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+<!-- fb -->
+<!-- <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=434964853217350";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+</head> -->
+
+<body>
+<div class ="container">
+<!-- <img src="<%= asset_path( 'secretariabanner.jpg') %>" /> -->
+</div>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">Secretaria Ejecutiva</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li><%= link_to "Bienvenido", '/' %></li>
+          <li><%= link_to "Programa" , :controller => 'schedules', :action => 'index'%></li>
+           <li><%= link_to "Registrate", :controller => 'registers', :action => 'new' %></li>
+          <li><%= link_to "Contacto" %></li>
+          
+          <li><div id="user_nav">
+  
+
+
+
+
+</div></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class= "container">
+    <div class = "row">
+     <div class = "span12"> <%= yield %> </div> 
+    
+    </div>
+  </div>
 </body>
+
 </html>
